@@ -34,6 +34,7 @@
 #include "RooMinimizer.h"
 #include "RooConstVar.h"
 #include "RooNumIntConfig.h"
+#include "RooMinuit.h"
 
 #include "RooStats/ModelConfig.h"
 #include "RooStats/ProfileLikelihoodTestStat.h"
@@ -3008,4 +3009,492 @@ TString Util::GetXTitle(RooRealVar* regionVar){
     else if(  varName.Contains("_jet7Pt")) outName = "p_{T}^{jet7} [GeV]";  
     return outName;
 }
+
+
+
+
+//_____________________________________________________________________________
+RooAbsReal* Util::CreateNLL( RooWorkspace* w, TString fitRegions, Bool_t lumiConst)
+{
+    if(w==NULL){ 
+        Logger << kERROR << "Workspace not found, no fitting performed" << GEndl;
+        return NULL; 
+    }
+    RooSimultaneous* pdf = (RooSimultaneous*) w->pdf("simPdf");
+
+    RooAbsData* data = (RooAbsData*)w->data("obsData") ; 
+    RooCategory* regionCat = (RooCategory*) w->cat("channelCat");  
+
+    data->table(*((RooAbsCategory*)regionCat))->Print("v");
+
+    if (lumiConst) {
+      RooRealVar* lumi = (RooRealVar*) w->var("Lumi");
+      if (lumi!=NULL) lumi->setConstant(lumiConst); 
+    }
+
+    // Construct an empty simultaneous pdf using category regionCat as index
+    RooSimultaneous* simPdfFitRegions = pdf;
+    RooDataSet* dataFitRegions = (RooDataSet*) data;
+
+    std::vector<TString> fitRegionsVec = GetRegionsVec(fitRegions, regionCat);
+
+    unsigned int numFitRegions = fitRegionsVec.size();
+    std::vector<RooDataSet*> dataVec;
+    std::vector<RooAbsPdf*> pdfVec;
+
+    for(unsigned int iVec=0; iVec<numFitRegions; iVec++){
+        TString regionCatLabel = fitRegionsVec[iVec];
+        if( regionCat->setLabel(regionCatLabel,kTRUE)){  
+            Logger << kWARNING << " Label '" << regionCatLabel << "' is not a state of channelCat (see Table) " << GEndl; 
+        } else{
+            // dataset for each channel/region/category
+            TString dataCatLabel = Form("channelCat==channelCat::%s",regionCatLabel.Data());
+            RooDataSet* regionData = (RooDataSet*) data->reduce(dataCatLabel.Data());
+            dataVec.push_back(regionData);
+            // pdf for each channel/region/category
+            RooAbsPdf* regionPdf = (RooAbsPdf*) pdf->getPdf(regionCatLabel.Data());
+            pdfVec.push_back(regionPdf);
+        }
+    }
+
+    if(dataVec.empty()){ 
+        Logger << kERROR << "   NONE OF THE REGIONS ARE SPECIFIED IN DATASET, NO FIT WILL BE PERFORMED" << GEndl; 
+        return 0;
+    }
+    else if(pdfVec.empty()){ 
+        Logger << kERROR << "   NONE OF THE REGIONS ARE SPECIFIED IN SIMULTANEOUS PDF, NO FIT WILL BE PERFORMED" << GEndl; 
+        return 0;
+    }
+    else{
+        // Construct a simultaneous dataset for all fit regions
+        dataFitRegions = (RooDataSet*) dataVec[0]->Clone("dataFitRegions");
+        for(unsigned int jVec=1; jVec<dataVec.size(); jVec++){
+            dataFitRegions->append(*dataVec[jVec]);
+        }
+        // Construct a simultaneous pdf using category regionCat as index
+        simPdfFitRegions = new RooSimultaneous("simPdfFitRegions","simultaneous pdf only for fit regions",*regionCat) ;
+        for(unsigned int kVec=0; kVec<pdfVec.size(); kVec++){
+            simPdfFitRegions->addPdf(*pdfVec[kVec],fitRegionsVec[kVec].Data());
+        }
+    }
+
+    RooAbsPdf* pdf_FR = simPdfFitRegions;
+    RooDataSet* data_FR = dataFitRegions;
+
+    RooStats::ModelConfig* mc = Util::GetModelConfig( w );
+    const RooArgSet* globObs = mc->GetGlobalObservables();
+
+    RooAbsReal* nll = (RooNLLVar*) pdf_FR->createNLL(*data_FR, RooFit::GlobalObservables(*globObs) ); 
+
+    return nll;
+}
+
+
+
+void
+Util::PlotYieldPLL(RooWorkspace* w, RooAbsReal* nll, RooAbsReal* bkgf, RooFitResult* r)
+{
+  // naive first estimate of bkg value and (large) 2-sigma error.
+  double bval = bkgf->getVal();
+  double berr = ( r!=0 ? Util::GetPropagatedError(bkgf,*r) : 4.0 * TMath::Sqrt(bval) );
+  if (bval==0 && berr==0) { berr = 2.0; }
+
+  double floatParInitVal[10000] ;
+  char   floatParName[10000][100] ;
+  int nFloatParInitVal(0) ;
+  RooArgList ral_floats = r->floatParsFinal() ;
+  TIterator* floatParIter = ral_floats.createIterator() ;
+  {
+    RooRealVar* par ;
+    while ( (par = (RooRealVar*) floatParIter->Next()) ) {
+      sprintf( floatParName[nFloatParInitVal], "%s", par->GetName() ) ;
+      floatParInitVal[nFloatParInitVal] = par->getVal() ;
+      nFloatParInitVal++ ;
+    }
+  }
+
+
+  // scan parameter
+  RooRealVar* b = new RooRealVar("b", "background yield", bval, (bval-berr>=0 ? bval-berr : 0.0), bval+berr);
+
+  // lagrange constant
+  RooRealVar* width = new RooRealVar("width", "lagrange constant", 100.);
+  
+  printf("\n\n Unbiased best value for new POI %s is : %7.1f\n\n", bkgf->GetName(), bkgf->getVal() ) ;
+  double best_poi_val = bkgf->getVal() ;
+  
+  char minuit_formula[10000] ;
+  sprintf( minuit_formula, "%s+%s*(%s-%s)*(%s-%s)",
+	   nll->GetName(),
+	   width->GetName(),
+	   bkgf->GetName(), b->GetName(),
+	   bkgf->GetName(), b->GetName()
+	   ) ;
+
+  char weight_formula[10000] ;
+  sprintf( weight_formula, "%s*(%s-%s)*(%s-%s)",
+           width->GetName(),
+           bkgf->GetName(), b->GetName(),
+           bkgf->GetName(), b->GetName()
+           ) ;
+
+  
+  printf("\n\n Creating new minuit variable with formula: %s\n\n", minuit_formula ) ;
+  RooFormulaVar* new_minuit_var = new RooFormulaVar("new_minuit_var", minuit_formula,
+						    RooArgList( *nll,
+								*width,
+								*bkgf, *b,
+								*bkgf, *b
+								) ) ;
+
+  RooFormulaVar* weight_var = new RooFormulaVar("weight_var", weight_formula,
+                                                    RooArgList( *width,
+                                                                *bkgf, *b,
+                                                                *bkgf, *b
+                                                                ) ) ; 
+  
+  printf("\n\n Current value is %.2f\n\n",
+	 new_minuit_var->getVal() ) ;
+  
+  RooMinuit* rminuit = new RooMinuit( *new_minuit_var ) ;
+
+  //RooMinuit* rminuit = new RooMinuit( *nll ) ;
+
+//////////////////////////
+
+  if (false) {
+    RooStats::ModelConfig* mc = Util::GetModelConfig(w);
+
+    if(mc==0){
+        Logger << kERROR << "ModelConfig is null!" << GEndl;
+        return;
+    }
+
+    RooAbsPdf* pdf = mc->GetPdf();
+    const RooArgSet* obsset = mc->GetObservables();
+
+    if((pdf==0)||(obsset==0)){
+        Logger << kERROR << "pdf or observables not found" <<GEndl;
+        return;
+    }
+
+    TIterator* iter = obsset->createIterator() ;
+    RooAbsArg* arg ;
+    while( (arg=(RooAbsArg*)iter->Next()) ) {
+        if(arg->InheritsFrom("RooRealVar") && !arg->isConstant()){
+            TString UncertaintyName = arg->GetName();
+            RooRealVar* var = w->var( UncertaintyName.Data() );
+            var->setConstant();
+        }
+    }
+    delete iter;
+  }
+
+////////////////////////////
+
+  if (true) {
+    rminuit->migrad();
+    rminuit->hesse();
+
+    return; 
+  }
+    
+  RooAbsReal* plot_var = nll ;
+  
+  printf("\n\n Current value is %.2f\n\n",
+	 plot_var->getVal() ) ;
+  
+  //rminuit->setPrintLevel(verbLevel-1) ;
+  //if ( verbLevel <=0 ) { rminuit->setNoWarn() ; }
+  
+
+  //-- If POI range is -1 to -1, automatically determine the range using the set value.
+
+  int npoiPoints = 50;
+
+  double poiMinVal = -1.;
+  double poiMaxVal = -1.;
+  double startPoiVal = bkgf->getVal();
+
+  if ( poiMinVal < 0. && poiMaxVal < 0. ) {
+    
+    printf("\n\n Automatic determination of scan range.\n\n") ;
+    
+    if ( startPoiVal <= 0. ) {
+      printf("\n\n *** POI starting value zero or negative %g.  Quit.\n\n\n", startPoiVal ) ;
+      return ;
+    }
+    
+    poiMinVal = startPoiVal - 3.5 * sqrt(startPoiVal) ;
+    poiMaxVal = startPoiVal + 6.0 * sqrt(startPoiVal) ;
+    
+    if ( poiMinVal < 0. ) { poiMinVal = 0. ; }
+    
+    printf("    Start val = %g.   Scan range:   %g  to  %g\n\n", startPoiVal, poiMinVal, poiMaxVal ) ;
+        
+  }
+  
+
+
+  //----------------------------------------------------------------------------------------------
+
+
+  double poiVals_scanDown[1000] ;
+  double nllVals_scanDown[1000] ;
+       
+  //-- Do scan down from best value.
+
+  printf("\n\n +++++ Starting scan down from best value.\n\n") ;
+
+  double minNllVal(1.e9) ;
+
+  for ( int poivi=0; poivi < npoiPoints/2 ; poivi++ ) {
+
+    ////double poiValue = poiMinVal + poivi*(poiMaxVal-poiMinVal)/(1.*(npoiPoints-1)) ;
+    double poiValue = best_poi_val - poivi*(best_poi_val-poiMinVal)/(1.*(npoiPoints/2-1)) ;
+
+    b -> setVal( poiValue ) ;
+    b -> setConstant( kTRUE ) ;
+    
+    //+++++++++++++++++++++++++++++++++++
+
+    rminuit->migrad() ;
+    rminuit->hesse() ;
+    RooFitResult* rfr = rminuit->save() ;
+
+    //+++++++++++++++++++++++++++++++++++
+
+
+    //if ( verbLevel > 0 ) { rfr->Print("v") ; }
+        
+    float fit_minuit_var_val = rfr->minNll() ;
+    
+    printf(" %02d : poi constraint = %.2f : allvars : MinuitVar, createNLL, PV, POI :    %.5f   %.5f   %.5f\n",
+	   poivi, b->getVal(), fit_minuit_var_val, nll->getVal(), bkgf->getVal() ) ;
+    cout << flush ;
+        
+    poiVals_scanDown[poivi] = bkgf->getVal() ;
+    nllVals_scanDown[poivi] = weight_var->getVal() ; // plot_var->getVal() ;
+    
+    if ( nllVals_scanDown[poivi] < minNllVal ) { minNllVal = nllVals_scanDown[poivi] ; }
+    
+    delete rfr ;
+    
+  } // poivi
+
+
+  printf("\n\n +++++ Resetting floats to best fit values.\n\n") ;
+
+  for ( int pi=0; pi<nFloatParInitVal; pi++ ) {
+    RooRealVar* par = w->var( floatParName[pi] ) ;
+    par->setVal( floatParInitVal[pi] ) ;
+  } // pi.
+  
+
+
+
+  printf("\n\n +++++ Starting scan up from best value.\n\n") ;
+  
+  //-- Now do scan up.
+  
+  double poiVals_scanUp[1000] ;
+  double nllVals_scanUp[1000] ;
+  
+  for ( int poivi=0; poivi < npoiPoints/2 ; poivi++ ) {
+    
+    double poiValue = best_poi_val + poivi*(poiMaxVal-best_poi_val)/(1.*(npoiPoints/2-1)) ;
+    
+    b -> setVal( poiValue ) ;
+    b -> setConstant( kTRUE ) ;
+    
+    
+    //+++++++++++++++++++++++++++++++++++
+    
+    rminuit->migrad() ;
+    rminuit->hesse() ;
+    RooFitResult* rfr = rminuit->save() ;
+    
+    //+++++++++++++++++++++++++++++++++++
+        
+    float fit_minuit_var_val = rfr->minNll() ;
+    
+    printf(" %02d : poi constraint = %.2f : allvars : MinuitVar, createNLL, PV, POI :   %.5f   %.5f   %.5f\n",
+	   poivi, b->getVal(), fit_minuit_var_val, nll->getVal(), bkgf->getVal() ) ;
+    cout << flush ;
+    
+    poiVals_scanUp[poivi] = bkgf->getVal() ;
+    nllVals_scanUp[poivi] = weight_var->getVal() ;  // plot_var->getVal() ;
+    
+    if ( nllVals_scanUp[poivi] < minNllVal ) { minNllVal = nllVals_scanUp[poivi] ; }
+    
+    delete rfr ;
+        
+  } // poivi
+  
+  
+
+       double poiVals[1000] ;
+       double nllVals[1000] ;
+
+       int pointCount(0) ;
+       for ( int pi=0; pi<npoiPoints/2; pi++ ) {
+          poiVals[pi] = poiVals_scanDown[(npoiPoints/2-1)-pi] ;
+          nllVals[pi] = nllVals_scanDown[(npoiPoints/2-1)-pi] ;
+          pointCount++ ;
+       }
+       for ( int pi=1; pi<npoiPoints/2; pi++ ) {
+          poiVals[pointCount] = poiVals_scanUp[pi] ;
+          nllVals[pointCount] = nllVals_scanUp[pi] ;
+          pointCount++ ;
+       }
+       npoiPoints = pointCount ;
+
+       printf("\n\n --- TGraph arrays:\n") ;
+       for ( int i=0; i<npoiPoints; i++ ) {
+          printf("  %2d : poi = %6.1f, nll = %g\n", i, poiVals[i], nllVals[i] ) ;
+       }
+       printf("\n\n") ;
+
+       double nllDiffVals[1000] ;
+
+       double poiAtMinlnL(-1.) ;
+       double poiAtMinusDelta2(-1.) ;
+       double poiAtPlusDelta2(-1.) ;
+       for ( int poivi=0; poivi < npoiPoints ; poivi++ ) {
+          nllDiffVals[poivi] = 2.*(nllVals[poivi] - minNllVal) ;
+          double poiValue = poiMinVal + poivi*(poiMaxVal-poiMinVal)/(1.*npoiPoints) ;
+          if ( nllDiffVals[poivi] < 0.01 ) { poiAtMinlnL = poiValue ; }
+          if ( poiAtMinusDelta2 < 0. && nllDiffVals[poivi] < 2.5 ) { poiAtMinusDelta2 = poiValue ; }
+          if ( poiAtMinlnL > 0. && poiAtPlusDelta2 < 0. && nllDiffVals[poivi] > 2.0 ) { poiAtPlusDelta2 = poiValue ; }
+       } // poivi
+
+       printf("\n\n Estimates for poi at delta ln L = -2, 0, +2:  %g ,   %g ,   %g\n\n", poiAtMinusDelta2, poiAtMinlnL, poiAtPlusDelta2 ) ;
+
+
+  
+
+       ///////////////////////////////////////////////////////////////////
+
+
+       //--- Main canvas
+
+       TCanvas* cscan = (TCanvas*) gDirectory->FindObject("cscan") ;
+       if ( cscan == 0x0 ) {
+          printf("\n Creating canvas.\n\n") ;
+          cscan = new TCanvas("cscan","Delta nll") ;
+       }
+
+
+       char gname[1000] ;
+
+       TGraph* graph = new TGraph( npoiPoints, poiVals, nllDiffVals ) ;
+       sprintf( gname, "scan_%s", bkgf->GetName() ) ;
+       graph->SetName( gname ) ;
+
+       double poiBest(-1.) ;
+       double poiMinus1stdv(-1.) ;
+       double poiPlus1stdv(-1.) ;
+       double poiMinus2stdv(-1.) ;
+       double poiPlus2stdv(-1.) ;
+       double twoDeltalnLMin(1e9) ;
+
+       int nscan(1000) ;
+       for ( int xi=0; xi<nscan; xi++ ) {
+
+          double x = poiVals[0] + xi*(poiVals[npoiPoints-1]-poiVals[0])/(nscan-1) ;
+
+          double twoDeltalnL = graph -> Eval( x, 0, "S" ) ;
+
+          if ( poiMinus1stdv < 0. && twoDeltalnL < 1.0 ) { poiMinus1stdv = x ; printf(" set m1 : %d, x=%g, 2dnll=%g\n", xi, x, twoDeltalnL) ;}
+          if ( poiMinus2stdv < 0. && twoDeltalnL < 4.0 ) { poiMinus2stdv = x ; printf(" set m2 : %d, x=%g, 2dnll=%g\n", xi, x, twoDeltalnL) ;}
+          if ( twoDeltalnL < twoDeltalnLMin ) { poiBest = x ; twoDeltalnLMin = twoDeltalnL ; }
+          if ( twoDeltalnLMin < 0.3 && poiPlus1stdv < 0. && twoDeltalnL > 1.0 ) { poiPlus1stdv = x ; printf(" set p1 : %d, x=%g, 2dnll=%g\n", xi, x, twoDeltalnL) ;}
+          if ( twoDeltalnLMin < 0.3 && poiPlus2stdv < 0. && twoDeltalnL > 4.0 ) { poiPlus2stdv = x ; printf(" set p2 : %d, x=%g, 2dnll=%g\n", xi, x, twoDeltalnL) ;}
+
+          if ( xi%100 == 0 ) { printf( " %4d : poi=%6.2f,  2DeltalnL = %6.2f\n", xi, x, twoDeltalnL ) ; }
+
+       }
+       printf("\n\n POI estimate :  %g  +%g  -%g    [%g,%g],   two sigma errors: +%g  -%g   [%g,%g]\n\n",
+               poiBest,
+               (poiPlus1stdv-poiBest), (poiBest-poiMinus1stdv), poiMinus1stdv, poiPlus1stdv,
+               (poiPlus2stdv-poiBest), (poiBest-poiMinus2stdv), poiMinus2stdv, poiPlus2stdv
+               ) ;
+
+       const char* new_poi_name = bkgf->GetName();
+
+       printf(" %s val,pm1sig,pm2sig: %7.2f  %7.2f  %7.2f  %7.2f  %7.2f\n",
+	      bkgf->GetName(), poiBest, (poiPlus1stdv-poiBest), (poiBest-poiMinus1stdv), (poiPlus2stdv-poiBest), (poiBest-poiMinus2stdv) ) ;
+
+       double ymax = 10.;
+       char htitle[1000] ;
+       sprintf(htitle, "%s profile likelihood scan: -2ln(L/Lm)", new_poi_name ) ;
+       TH1F* hscan = new TH1F("hscan", htitle, 10, poiMinVal, poiMaxVal ) ;
+       hscan->SetMinimum(0.) ;
+       hscan->SetMaximum(ymax) ;
+
+
+       hscan->DrawCopy() ;
+       graph->SetLineColor(4) ;
+       graph->SetLineWidth(3) ;
+       graph->Draw("CP") ;
+       gPad->SetGridx(1) ;
+       gPad->SetGridy(1) ;
+       cscan->Update() ;
+
+       TLine* line = new TLine() ;
+       line->SetLineColor(2) ;
+       line->DrawLine(poiMinVal, 1., poiPlus1stdv, 1.) ;
+       line->DrawLine(poiMinus1stdv,0., poiMinus1stdv, 1.) ;
+       line->DrawLine(poiPlus1stdv ,0., poiPlus1stdv , 1.) ;
+
+       TText* text = new TText() ;
+       text->SetTextSize(0.04) ;
+       char tstring[1000] ;
+
+       sprintf( tstring, "%s = %.1f +%.1f -%.1f", new_poi_name, poiBest, (poiPlus1stdv-poiBest), (poiBest-poiMinus1stdv) ) ;
+       text -> DrawTextNDC( 0.15, 0.85, tstring ) ;
+
+       sprintf( tstring, "68%% interval [%.1f,  %.1f]", poiMinus1stdv, poiPlus1stdv ) ;
+       text -> DrawTextNDC( 0.15, 0.78, tstring ) ;
+
+
+       char hname[1000] ;
+       sprintf( hname, "hscanout_%s", new_poi_name ) ;
+       TH1F* hsout = new TH1F( hname,"scan results",4,0.,4.) ;
+       double obsVal(-1.) ;
+       hsout->SetBinContent(1, obsVal ) ;
+       hsout->SetBinContent(2, poiPlus1stdv ) ;
+       hsout->SetBinContent(3, poiBest ) ;
+       hsout->SetBinContent(4, poiMinus1stdv ) ;
+       TAxis* xaxis = hsout->GetXaxis() ;
+       xaxis->SetBinLabel(1,"Observed val.") ;
+       xaxis->SetBinLabel(2,"Model+1sd") ;
+       xaxis->SetBinLabel(3,"Model") ;
+       xaxis->SetBinLabel(4,"Model-1sd") ;
+
+       char outrootfile[10000] ;
+       sprintf( outrootfile, "scan-ff-bs-%s.root", new_poi_name ) ;
+
+       char outpdffile[10000] ;
+       sprintf( outpdffile, "scan-ff-bs-%s.pdf", new_poi_name ) ;
+
+       cscan->Update() ; cscan->Draw() ;
+
+       printf("\n Saving %s\n", outpdffile ) ;
+       cscan->SaveAs( outpdffile ) ;
+
+
+
+       //--- save in root file
+
+       printf("\n Saving %s\n", outrootfile ) ;
+       TFile fout(outrootfile,"recreate") ;
+       graph->Write() ;
+       hsout->Write() ;
+       fout.Close() ;
+
+
+  
+}
+
 
